2003-12-30  Han-Wen Nienhuys   <hanwen@cs.uu.nl>

	* scm/output-lib.scm (note-head-style->attachment-coordinates):
	change calling convention of stem-attachment function. 

	* buildscripts/mf-to-table.py: read and dump WX/WY fields

	* mf/feta-autometric.mf: dump WX/WY fields too
	
	* mf/parmesan-heads.mf: idem.

	* mf/feta-bolletjes.mf (slash_slope): set WX/WY fields for
	attachment coordinates.

	* lily/note-head.cc (stem_attachment_coordinate): read stem
	attachment from the notehead glyphs WX/WY fields.

	* lily/include/font-metric.hh (struct Font_metric): add methods
	get_indexed_wxwy (), make a distinction between looking up by
	index and ASCII  

	* mf/feta-bolletjes.mf: rewrite note head MF code.
	(test_outlines): make heads more rotund for smaller sizes. 

2003-12-29  Han-Wen Nienhuys   <hanwen@cs.uu.nl>

	* mf/feta-params.mf (stafflines): fix stafflinethickness at 0.5 pt
	throughout. Font scaling fixes throughout.

	* mf/feta-sleur,slur.mf: remove. 

	* mf/feta-slag.mf: rewrite.

2003-12-24  Han-Wen Nienhuys   <hanwen@cs.uu.nl>

	* VERSION: release 2.1.3

	* stepmake/stepmake/toplevel-targets.make: remove pfa targets

	* make/lilypond.redhat.spec.in (Group): remove MAKE_PFA_FILES

	* lily/mark-engraver.cc (process_music): fix mark
	\default. (backportme)

	* stepmake/stepmake/automatically-generated.sub.make (default):
	use -n for head/tail commands. 

	* lily/tie-engraver.cc (acknowledge_grob): make ties only for note
	heads with the same pitch. (backportme)

2003-12-20  Han-Wen Nienhuys   <hanwen@cs.uu.nl>

	* lily/recording-group-engraver.cc (finalize): set protected_scm
	member to '() before finalizing.

	* lily/translator-group.cc (finalize): remove removal_processing () 

	* lily/recording-group-engraver.cc: new engraver: record
	synchronized start & end times for each music object.

	* lily/parser.yy (toplevel_expression): execute score rendering
	during parsing. Cleanup output-filename handling; this is no
	longer done with global variables.